# hiccup

./: .gitignore  CLAUDE.md  CLICKUP-EXPORT.md  README.md  clickup_export.py  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.spec-driver/: workflow.toml
.spec-driver/deltas/DE-001-port_clickup_export_to_typescript_with_auth_fix/: DE-001.md  DR-001.md  IP-001.md
.spec-driver/deltas/DE-001-port_clickup_export_to_typescript_with_auth_fix/phases/: phase-01.md
docs/: v3.yaml
src/: cli.ts  clickup.test.ts  clickup.ts  export.ts  tree.test.ts  tree.ts  types.ts  url.test.ts  url.ts
