[project]
name = "clickup-export"
version = "0.1.0"
description = "Export ClickUp task hierarchies to JSON"
readme = "CLICKUP-EXPORT.md"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
clickup-export = "clickup_export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
